2003-06-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dMatrix.cc (any_element_is_negative): If new optional arg
	neg_zero is true, also return true for negative zero.

2003-06-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASSL.cc (DASSL::do_integrate): Set liw to 21 + n, not 20 + n.
	Handle step limit.
	* DASSL-opts.in: New option for step limit.

2003-06-16  Per Persson <persquare@mac.com>

	* oct-shlib.cc: Include mach-o/dyld.h, not Mach-O/dyld.h.

2003-06-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASRT.cc (DASRT::integrate): Set liw to 21 + n, not 20 + n.
	Store step limit in iwork(20), not iwork(18).

2003-05-16  Paul Kienzle <pkienzle@users.sf.net>

	* oct-rand.cc: Use liboctave's clock layer instead of the system clock.

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in: Handle DESTDIR.

	* kpse.cc (kpse_path_iterator::next): Skip consecutive colons here.
	(kpse_path_iterator::set_end): Don't miss last element when not
	followed by a colon.

2003-05-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array-idx.h (Array<T>::index): Fix off-by-one error.

2003-05-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc (kpse_absolute_p): Fix typo in translation.
	(find_first_of): Also do an absolute search on each
	name before looking in the path.

2003-05-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc (dir_list_add): Ensure that directory ends with a
	directory separator.

2003-04-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pathsearch.cc: Include kpse.cc here.

	* kpse.cc: All functions are now static.  Massive surgery to
	condense kpathsearch library to a single file of just the
	essentials for Octave and convert to using C++ strings (no more
	calls to malloc, very few calls to new, so there should be much
	less potential for introducing memory leaks now).

	* Makefile.in (EXTRAS): Move kpse.cc here from
	LIBOCT_PATHSEARCH_CXX_SOURCES.

	* kpse.h, kpse-config.h: Delete.
	* Makefile.in (INCLUDES): Delete them from the list.
